feign client implemetation in individuals api + logic in person service + a lot of things
